tests/sksl/errors/ReturnMissingValue.sksl
int foo() {
    return;
}

void main() {}
